fix: flash of dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-:root {
+/* :root {
     --primary-color: #E5E9F0;
     --primary-bg-color: #2E3440;
     --secondary-color: #88C0D0;
-}
+} */
 
 * {
     margin: 0;
